@@ -4,6 +4,7 @@
 - copy parameters and html_options on cloning action link
 - fix missing argument in datepicker conditions
 - check authorization in model for plural associations nested links
+- Allow to set action_group in nested.add_link
 
 = 3.2.16
 - Fix use of column.css_class in form when is a proc, it wasn't skipped when form was a columns group
